# QuickDrop

./: .gitignore  .ralphrc  CNAME  PRD.md  README.md  docker-compose.yml  index.html  script.js
.github/workflows/: README.md  build-desktop.yml  build-mobile.yml  build.yml  ci.yml  release-all.yml
.ralph/: .circuit_breaker_state  .last_reset  .loop_start_sha  .ralph_session  .ralph_session_history  .response_analysis  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralph/specs/: requirements.md
deploy/: .env.example  README.md  docker-compose.yml  init-db.sql
deploy/coturn/: README.md  docker-compose.yml  turnserver.conf
deploy/nginx/: nginx.conf
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/__tests__/: fileTransfer.test.ts
desktop/src/components/: AppLayout.tsx  ConfettiBurst.tsx  PairingDialog.tsx  ReceiveDialog.tsx
desktop/src/pages/: AdminPage.tsx  DeviceListPage.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx  TransferHistoryPage.tsx  TransferPage.tsx
desktop/src/services/: api.ts  fileTransfer.ts  notificationService.ts  webrtc.ts  websocket.ts
desktop/src/stores/: authStore.ts  deviceStore.ts  transferHistoryStore.ts
desktop/src/styles/: global.css
desktop/tests/: webrtc-compat.test.ts
docs/superpowers/plans/: 2026-06-21-webrtc-datachannel.md
downloads/: quickdrop-macos.dmg
mobile/android/: build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/ios/: .gitignore  README.md  project.yml
mobile/ios/QuickDrop/: AppDelegate.swift  Info.plist  MainViewController.swift  SceneDelegate.swift
services/auth/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json  vitest.config.ts
services/auth/prisma/: schema.prisma
services/auth/src/: index.ts
services/auth/tests/: adminService.test.ts  authService.test.ts  blacklistService.test.ts  e2e.test.ts  rateLimiter.test.ts  securityAudit.test.ts  setup.ts
services/signal/: .env.example  Dockerfile  package-lock.json  package.json  vitest.config.ts
services/signal/src/: index.ts
services/signal/tests/: authMiddleware.test.ts  deviceManager.test.ts  setup.ts  (+3 more)
shared/: package.json
shared/types/: index.ts
shared/utils/: index.ts
website/: index.html  styles.css
website/downloads/: README.md
(+61 files in other folders)
