[package]
name = "quickdrop-desktop"
version = "0.1.0"
description = "QuickDrop Desktop Client — 跨平台 P2P 文件传输"
authors = ["QuickDrop Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "quickdrop_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 锁定 time 到 0.3.41 以解决 cookie 0.18.1 与 time 0.3.52+ 的 API 不兼容问题
# (cookie 调用 time::format::parse() 时只传 1 个参数，但 time 0.3.52 把签名改成需要 2 个参数)
